# resume-builder

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  project_structure.yaml  pyproject.toml  schema.yaml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: mcp.json  plugin.json
agents/: ats-bot.agent.md  cover-letter-reviewer.agent.md  engineer-peer.agent.md  hiring-manager.agent.md  hr-screener.agent.md  recruiter.agent.md  sales-strategist.agent.md  technical-reviewer.agent.md
scripts/: migrate_sessions.py
skills/apply/: SKILL.md
skills/cover-letter/: SKILL.md
skills/generate/: SKILL.md
skills/import/: SKILL.md
skills/ingest/: SKILL.md
skills/init/: SKILL.md
skills/match/: SKILL.md
skills/qualify/: SKILL.md
skills/research/: SKILL.md
skills/review/: SKILL.md
skills/score/: SKILL.md
skills/setup/: SKILL.md
skills/tailor/: SKILL.md
skills/verify/: SKILL.md
src/resume_builder/: cli.py  core.py  mcp_server.py  templates.py
src/resume_builder/knowledge/: achievements.py  company.py  session.py
src/resume_builder/models/: company.py  resume.py  template_config.py
src/resume_builder/parser/: resume_parser.py
src/resume_builder/renderers/: docx_renderer.py  html_renderer.py  markdown_renderer.py  pdf_renderer.py
tests/: test_achievements.py  test_company_model.py  test_company_store.py  test_generate.py  test_parser.py  test_provenance.py  test_renderers.py  test_session.py  test_template_config.py  test_template_loading.py
tests/fixtures/: sample_resume.yaml
(+2 files in other folders)
